[package]
name = "tmpo"
description = "Command line utility to create new workspaces based on predefined templates"
version = "2.0.2"
authors = ["Thomas Pöhlmann <thomaspoehlmann96@googlemail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
clap = { version = "3.0.0-beta.2" }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
serde_yaml = "0.8.14"
dirs = "3.0.1"
log = "0.4.11"
log4rs = "0.13.0"
git2 = "0.13"
colored = "2.0.0"
dialoguer = "0.7.1"
tempfile = "3.1.0"
flate2 = "1.0.19"
tar = "0.4.30"
handlebars = "3.5.1"
regex = "1.4.2"
url = "2.2.0"
base64 = "0.13.0"
semver = "0.11.0"

[dependencies.reqwest]
version = "0.10.8"
features = ["blocking", "json"]
default-features = false

[dependencies.self_update]
version = "0.22.0"
features = ["archive-tar"]

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.30", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
