[package]
name = "tmpo"
description = "Command line utility to create new workspaces based on predefined templates"
version = "2.5.1"
authors = ["Thomas Pöhlmann <thomaspoehlmann96@googlemail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
clap = { version = "3.0.0-beta.2" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.17"
dirs = "3.0.1"
log = "0.4.14"
git2 = "0.13"
colored = "2.0.0"
dialoguer = "0.7.1"
tempfile = "3.2.0"
flate2 = "1.0.20"
tar = "0.4.32"
handlebars = "3.5.2"
regex = "1.4.3"
url = "2.2.0"
base64 = "0.13.0"
semver = "0.11.0"
convert_case = "0.4.0"
linked_hash_set = "0.1.4"
chrono = "0.4.13"

[dependencies.log4rs]
version = "1.0.0"

[dependencies.reqwest]
version = "0.11.0"
features = ["blocking", "json"]
default-features = false

[dependencies.self_update]
version = "0.23.0"
features = ["archive-tar"]

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.32", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.7"
assert_cli = "0.6.3"
